--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       content="https://refine.dev/img/refine_social.png"
     />
     <title>
-      PM DashBoard
+      CRM Analytics System
     </title>
   </head>
-  <body>
+  <body> <!--gajjuu-->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
